# ll

./: .gitignore  README.md  pyproject.toml
data/: population.tsv
data/ldc/: ldc_datasets_metadata.csv  ldc_language_statistics.csv
data/lre/raw/Afrikaans/: page_1.html  page_2.html
data/lre/raw/Algerian Arabic/: page_1.html  page_2.html
data/lre/raw/American Sign Language/: page_1.html
data/lre/raw/Azerbaijani/: page_1.html
data/lre/raw/Balkan Gagauz Turkish/: page_1.html  page_2.html
data/lre/raw/Brazilian Portuguese/: page_1.html  page_2.html  page_3.html
data/lre/raw/Breton/: page_1.html  page_2.html
data/lre/raw/Dari/: page_1.html
data/lre/raw/Finland-Swedish Sign Language/: page_1.html
data/lre/raw/Germany/: page_1.html  page_2.html
data/lre/raw/Gulf Arabic/: page_1.html  page_2.html
data/lre/raw/Irish/: page_1.html  page_2.html
data/lre/raw/Maltese/: page_1.html  page_2.html
data/lre/raw/Marathi/: page_1.html  page_2.html
data/lre/raw/Modern Greek/: page_1.html  page_2.html
data/lre/raw/North Levantine Arabic/: page_1.html
data/lre/raw/Norwegian Bokm_l/: page_1.html  page_2.html
data/lre/raw/Old Russian/: page_1.html
data/lre/raw/Serbian/: page_1.html  page_2.html  page_3.html  page_4.html  page_5.html
data/lre/raw/italian/: page_1.html  (+13 more)
data/ours/: checked.tsv  top101_200.dedup.tsv  top101_200.tsv
scripts/: LRE_Map_fetch_data.py  LRE_Map_parse_metadata.py  UPenn_LDC_download.py  deduplicate_semhash.py  fetch_semanticscholar_metadata.py
scripts/plots/: plot_modality_sankey.py  plot_rdi_bins.py  task_mix_heatmap.py
