[project]
name = "ll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "adjusttext>=1.3.0",
    "beautifulsoup4>=4.14.2",
    "dashscope>=1.24.6",
    "datasets>=4.2.0",
    "duviz>=3.2.0",
    "kaleido>=1.1.0",
    "openai>=2.3.0",
    "plotly>=6.3.1",
    "qianfan>=0.4.12.3",
    "seaborn>=0.13.2",
    "semhash>=0.3.2",
    "sentence-transformers>=5.1.1",
    "tavily-python>=0.7.12",
    "tqdm>=4.67.1",
    "vllm>=0.11.0",
]
